--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             maxime inventore reprehenderit, eveniet error saepe et nulla adipisci asperiores. Aperiam tempora quibusdam
             unde ipsam. Nihil non enim voluptate voluptatem fugiat alias dolorum magnam
             assumenda ipsam?
-            Doloribus voluptatibus iste illo? Fuga saepe incidunt ipsum doloribus quaerat, delectus animi, perspiciatis
-            distinctio non sapiente, quis quod natus. Nihil non enim voluptate voluptatem fugiat alias dolorum magnam
+            Distinctio non sapiente, quis quod natus. Nihil non enim voluptate voluptatem fugiat alias dolorum magnam
             assumenda ipsam?
         </p>
     </main>
@@ -32,7 +31,7 @@
                 <li><button><a href="http://www.linkedin.com/in/shoham-palmer" target="_blank">LinkedIn</a></button>
                 </li>
                 <li>/</li>
-                <li><button><a href="https://github.com/Hexfloo" target="_blank">github</a></button></li>
+                <li><button><a href="https://github.com/Hexfloo" target="_blank">GitHub</a></button></li>
             </ul>
         </nav>
     </footer>
